# canoSim

./: .gitignore  CMakeLists.txt  README.md
examples/euler3D/: controls.txt  meshInput.txt
examples/heat2D/: meshInput.txt
solvers/: canoSim.cpp  canoSimxx.cu  matrixMultiply.cu
src/basic/: clock.cpp  clock.h  gFunctions.h
src/resources/: mesh.cpp
src/resources/finiteVolume/: EulerSolver.cu  EulerSolver.h  solverKernels.cu  solverKernels.h  solverKernelsI.cu
src/resources/math/: mathFuncs.cu  mathFuncs.h  mathFuncsT.cu
src/resources/math/vec/: vec.cpp  vec.h
src/resources/mesh/: cartMesh.cpp  cartMesh.h
src/resources/mesh/cell/: cell.cpp  cell.h
src/resources/mesh/face/: face.h
src/resources/mesh/vtk/: vtkWriter.cpp  vtkWriter.h
